kubeconfig/deployments-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api-deployment
  labels:
    app: express-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-api
  template:
    metadata:
      labels:
        app: express-api
    spec:
      containers:
      - name: api
        image: localhost:5001/rlim/webapp-api:1.2
        ports:
        - containerPort: 9000
