kubeconfig/deployments-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-client-deployment
  labels:
    app: react-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-client
  template:
    metadata:
      labels:
        app: react-client
    spec:
      containers:
      - name: client
        image: localhost:5001/rlim/webapp-client:1.0
        ports:
        - containerPort: 3000
