kubeconfig/statefulsets-mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image:  mongo:5.0
        ports:
        - name: mongodb
          containerPort: 27017
        volumeMounts:
        - name: mongodb-pvc-data
          mountPath: /data/db
          subPath: mongodb
      volumes:
      - name: conf
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: mongodb-pvc-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
