kubeconfig/lb-frontend.yaml
apiVersion: v1
kind: Service
metadata:
        name: lb-frontend
spec:
        selector:
                app: react-client
        ports:
                - protocol: TCP
                  port: 3000
                  targetPort: 3000
        clusterIP: 10.0.1.240
        type: LoadBalancer
status:
        loadBalancer:
                ingress:
                - ip:
