kubeconfig/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
        labels:
                app: express-api
        name: express-api-deployment
spec:
        ports:
        - protocol: TCP
          port: 9000
          targetPort: 9000
        selector:
                app: express-api
status:
        loadBalancer: {}
