kubeconfig/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
        labels:
                app: react-client
        name: react-client-deployment
spec:
        ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
        selector:
                app: react-client
status:
        loadBalancer: {}
