kubeconfig/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-localhost
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: react-client-deployment
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: express-api-deployment
            port:
              number: 9000
        path: /api/.*
        pathType: Prefix
status:
  loadBalancer: {}
